testsuite/vhdl/parser_rules/test_data/numeric_literal_failure/based_literal_001.expected
in file numeric_literal_failure/based_literal_001.input, line 2:
parse error: Test Suite Full Match Error! Unparsed input left!
016#0_FF#e-23
          ^
